--- a/src/main/resources/datasource.properties
+++ b/src/main/resources/datasource.properties
@@ -2,7 +2,7 @@ db.driverLocation=C:\\isprint\\new\\mmall\\src\\main\\webapp\\WEB-INF\\lib\\mysq
 db.driverClassName=com.mysql.jdbc.Driver
 
 #db.url=jdbc:mysql://192.1.1.1:3306/mmall?characterEncoding=utf-8
-db.url=jdbc:mysql://127.0.0.1:3306/mmall_learning?characterEncoding=utf-8
+db.url=jdbc:mysql://127.0.0.1:3306/mmall?characterEncoding=utf-8
 db.username=bioUser
 db.password=password
 
